# jira-cloud-api

./: .gitignore  .mypy.ini  README.rst  pyproject.toml  pytest.ini  pytest.server.ini
.github/workflows/: mypy.yml  pylint.yml  python-3-test.yml  python-publish.yml
tests/: mock_jira_server.py  test_jira_api.py
